egressInternetRestriction/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels: 
    name: internal
