egressInternetRestriction/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: internal  
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: internal  
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
