egressInternetRestriction/ingressLB.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: internal
  annotations:
    kubernetes.io/ingress.class: "gce"  
spec:
  tls:
  - hosts:
      - app.example.com
    secretName: tls-api-secret    
  rules:
  - host: app.example.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
